# PriceIndexCalc

./: .gitignore  LICENSE  README.md  chaining_pyspark.py  helpers.py  helpers_pyspark.py  index_methods.py  index_methods_pyspark.py  level_3.html  level_4.html  multilateral_methods.py  setup.cfg  setup.py  test.html  wls.py
PriceIndexCalc/pandas_modules/: helpers.py  multilateral.py  weighted_least_squares.py
PriceIndexCalc/pyspark_modules/: chaining.py  weighted_least_squares.py
multilateral_index_calc/pandas_modules/: chaining.py  index_methods.py  multilateral.py
multilateral_index_calc/pyspark_modules/: multilateral.py
pandas/: index_methods.py  multilateral.py  weighted_least_squares.py
pandas_modules/: bilateral.py  chaining.py  extension_methods.py  helpers.py  index_methods.py  multilateral.py  weighted_least_squares.py
pyspark/: chaining.py  helpers.py  index_methods.py  multilateral.py  weighted_least_squares.py
pyspark_modules/: index_methods.py  multilateral.py  native_spark_gk.py
src/PriceIndexCalc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_multilateral.py
tests/test_data/: large_input_df.csv  large_output_geks_fisher_fbew.csv  large_output_geks_fisher_hasp.csv  large_output_geks_fisher_mean_pub.csv  large_output_geks_fisher_movement.csv  large_output_geks_fisher_pure.csv  large_output_geks_fisher_wisp.csv  large_output_geks_jevons_fbew.csv  large_output_geks_jevons_hasp.csv  large_output_geks_jevons_mean_pub.csv  large_output_geks_jevons_movement.csv  large_output_geks_jevons_pure.csv  large_output_geks_jevons_wisp.csv  (+18 more)
(+5 files in other folders)
