[metadata]
name = PriceIndexCalc
version = 0.1-dev1
license_files = LICENSE
author = Dr. Usman Kayani
author_email = usman.kayani@ons.gov.uk
description = Price Index Calculator using bilateral or multilateral methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drrobotk/PriceIndexCalc
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7.1
install_requires = 
	pandas
	numpy
	scipy

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

